feat(database): implement database entities and connection
- Add TypeORM entities for User, Role, Pet, VaccinationRecord, Reservation, Service, and Payment
- Configure TypeORM module with PostgreSQL connection in app.module.ts
- Update nest-cli.json with watch options for better development experience
- Add database health check endpoint in app.controller.ts
- Update .env with new database configuration for petcare service
- Add required dependencies (typeorm, pg) to package.json

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-POSTGRES_DB=Recruitment
+POSTGRES_DB=petcare
 POSTGRES_USER=root
 POSTGRES_PASSWORD=root
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=admin
+DB_HOST=database
+DB_PORT=5432
+DB_NAME=petcare
+DB_USER=root
+DB_PASSWORD=root
