--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,10 +1,6 @@
 name: Backend CI
 
-# on:
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
+on: [push]
 
 env:
   DB_HOST: database
