--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -43,15 +43,9 @@ jobs:
       working-directory: ./backend
       run: npm ci
       
-    - name: Run lint
+    - name: Run production build
       working-directory: ./backend
-      run: npm run lint
-      
-    - name: Run tests
-      working-directory: ./backend
-      run: npm run test
-      env:
-        CI: true
+      run: npm run build
 
   build-and-push:
     needs: test
