feat(reservation): add reservation agent with local LLM integration
- Added new reservation endpoint in routes.py to handle reservation requests
- Implemented ReservationAgent class with local HuggingFace LLM and embeddings
- Updated requirements.txt with necessary dependencies for LLM integration
- Configured database connection and error handling in reservation_agent.py

--- a/Model/requirements.txt
+++ b/Model/requirements.txt
@@ -4,4 +4,12 @@ sqlalchemy
 llama-index
 langgraph
 psycopg2-binary
-sqlalchemy
+asyncio
+asgiref
+flask[async]
+torch
+sentence-transformers
+transformers
+llama-index-llms-huggingface
+sentencepiece
+llama-index-embeddings-huggingface
