--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "78a19772-9c4f-4c67-a36d-71074e3893a9"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
