--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^8.6.2",
     "@ionic/storage-angular": "^4.0.0",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^2.30.0",
     "ionicons": "^7.0.0",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
