--- a/Model/requirements.txt
+++ b/Model/requirements.txt
@@ -4,6 +4,7 @@ torch==2.1.2+cpu
 
 # Web framework
 flask[async]==2.3.3
+flask-cors==4.0.0
 gunicorn==21.2.0
 
 # Database
@@ -25,3 +26,4 @@ python-dotenv==1.0.0
 asyncio==3.4.3
 numpy==1.26.2
 pandas==2.1.3
+flask-cors
