--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -77,27 +77,39 @@ jobs:
         path: ./reports
         retention-days: 7
 
-  model-security:
+  admin-frontend-security:
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v4
     
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
       with:
-        python-version: '3.10'
+        node-version: '20'
     
-    - name: Install dependencies
-      working-directory: ./Model
-      run: |
-        python -m pip install --upgrade pip
-        pip install safety bandit
-        pip install -r requirements.txt
+    - name: Run npm audit
+      working-directory: ./FrontendAdmin
+      run: npm audit --production
+      continue-on-error: true
     
-    - name: Check for vulnerable Python packages
-      working-directory: ./Model
-      run: safety check
+    - name: Run OWASP Dependency-Check
+      uses: dependency-check/Dependency-Check_Action@main
+      with:
+        project: 'PetCare-Admin-Frontend'
+        path: './FrontendAdmin'
+        format: 'HTML'
+        out: './reports'
+        args: >
+          --failOnCVSS 7
+          --enableRetired
+    
+    - name: Upload Admin Frontend Security Report
+      uses: actions/upload-artifact@v4
+      with:
+        name: admin-frontend-security-report
+        path: ./reports
+        retention-days: 7
       continue-on-error: true
     
     - name: Run Bandit security scan
